tree-sitter-gsql/grammar.js
    source_file: $ => repeat(choice($._top_level_statement, ';')),

    _top_level_statement: $ => choice(
      $.vertex_definition,
      $.edge_definition,
      $.graph_definition,
      $.typedef_statement,
      $.query_definition,
      $.opencypher_query_definition,
      $.interpret_query_statement,
      $.loading_job_definition,
      $.schema_change_job_definition,
      $.data_source_definition,
      $.package_definition,
      $.use_statement,
      $.install_query_statement,
      $.run_query_statement,
      $.run_job_statement,
      $.drop_statement,
      $.show_statement,
      $.security_statement,
      $.grant_statement,
      $.revoke_statement,
      $.data_source_grant_statement,
      $.description_statement,
      $.row_policy_statement,
      $.install_function_statement,
      $.shell_command,
      $.stub_declaration,
    ),

    // ------------------------------------------------------------------
    // Stubs: the declarations of the built-ins, in the reference file that
    // "go to definition" opens (the equivalent of Python's `.pyi` files).
    // ------------------------------------------------------------------

    typedef_statement: $ => seq(
      kw('TYPEDEF'),
      choice(
        seq(kw('TUPLE'), '<', commaSep1($.tuple_field), '>'),
        // `TYPEDEF HeapAccum<Rec>(10, score DESC) Top_Heap`
        field('type', $.accumulator_type),
      ),
      field('name', $._name),
    ),

    _type: $ => choice(
      $.primitive_type,
      $.vertex_type,
      $.edge_type,
      $.collection_type,
      $.accumulator_type,
      $.tuple_type,
      alias($.identifier, $.type_identifier),
      alias($._soft_keyword, $.type_identifier),
    ),

    primitive_type: $ => choice(
      kw('INT'),
      kw('UINT'),
      kw('FLOAT'),
      kw('DOUBLE'),
      kw('BOOL'),
      kw('DATETIME'),
      seq(kw('STRING'), optional(kw('COMPRESS'))),
      kw('JSONOBJECT'),
      kw('JSONARRAY'),
      // `FIXED_BINARY(8)`: a binary value of 8 bytes.
      seq(kw('FIXED_BINARY'), '(', $.integer, ')'),
    ),

    vertex_type: $ => seq(
      kw('VERTEX'),
      optional(seq('<', field('type', $.identifier), '>')),
    ),

    edge_type: $ => seq(
      kw('EDGE'),
      optional(seq('<', field('type', $.identifier), '>')),
    ),

    // Anonymous tuple: `TUPLE<INT, STRING>`.
    tuple_type: $ => seq(kw('TUPLE'), '<', commaSep1(choice($.tuple_field, $._type)), '>'),

    accumulator_type: $ => prec.right(seq(
      field('kind', $.accumulator_kind),
      optional(seq(
        '<',
        // `BitwiseOrAccum<128>` takes a bit width.
        commaSep1(field('argument', choice($._type, $.group_by_field, $.integer))),
        '>',
      )),
      optional(field('heap', $.heap_options)),
    )),

    accumulator_kind: _ =>
      /(sum|max|min|avg|or|and|bitwiseor|bitwiseand|list|set|bag|map|heap|groupby|array|deviation|deviationp)accum/i,

    group_by_field: $ => seq(field('type', $._type), field('name', $.identifier)),

    heap_options: $ => seq(
      '(',
      choice(
        // The capacity may be left out; a leading name without ASC/DESC
        // followed by sort keys is read as the capacity.
        prec.dynamic(1, seq(field('capacity', $._expression), repeat1(seq(',', $.sort_key)))),
        commaSep1($.sort_key),
      ),
      ')',
    ),

    sort_key: $ => seq(
      field('name', $.identifier),
      optional(field('order', choice(kw('ASC'), kw('DESC')))),
    ),

    // ------------------------------------------------------------------
    // Queries
    // ------------------------------------------------------------------

    query_definition: $ => seq(
      kw('CREATE'),
      optional(seq(kw('OR'), kw('REPLACE'))),
      optional(field('modifier', choice(kw('DISTRIBUTED'), kw('TEMPLATE')))),
      choice(kw('QUERY'), kw('FUNCTION')),
      field('name', choice($.identifier, $.qualified_identifier)),
      field('parameters', $.parameter_list),
      repeat($._query_option),
      field('body', $.query_body),
    ),

    _query_option: $ => choice(
      $.for_graph_clause,
      $.returns_clause,
      $.api_clause,
      $.syntax_clause,
    ),

    parameter_list: $ => seq('(', commaSep($.parameter), ')'),

    parameter: $ => seq(
      field('type', choice($._type, $.file_type)),
      field('name', $.identifier),
      optional(seq('=', field('default', $._expression))),
    ),

    query_body: $ => seq(
      '{',
      repeat(seq(choice($._statement, $.exception_declaration), ';')),
      '}',
    ),

    _statement: $ => choice(
      $.typedef_statement,
      $.virtual_edge_declaration,
      $.accumulator_declaration,
      $.variable_declaration,
      $.file_declaration,
      $.vertex_set_declaration,
      $.assignment_statement,
      $.select_statement,
      $.expression_statement,
      $.if_statement,
      $.case_statement,
      $.while_statement,
      $.foreach_statement,
      $.break_statement,
      $.continue_statement,
      $.return_statement,
      $.print_statement,
      $.insert_statement,
      $.delete_statement,
      $.update_statement,
      $.raise_statement,
      $.try_statement,
    ),

    accumulator_declaration: $ => seq(
      optional(kw('STATIC')),
      // A TYPEDEF'd accumulator is named by its type identifier.
      field('type', choice($.accumulator_type, alias($.identifier, $.type_identifier))),
      // `SumAccum<INT> EDGE @weight` attaches the accumulator to edges.
      optional(kw('EDGE')),
      commaSep1($.accumulator_declarator),
    ),

    accumulator_declarator: $ => seq(
      field('name', choice($.global_accumulator, $.local_accumulator)),
      repeat($.array_dimension),
      optional(seq('=', field('value', $._expression))),
    ),

    array_dimension: $ => seq('[', optional($._expression), ']'),

    assignment_statement: $ => seq(
      field('left', $._assignable),
      field('operator', choice('=', '+=')),
      field('right', $._assignment_value),
    ),

    _assignable: $ => choice(
      $.identifier,
      $._soft_name,
      $.global_accumulator,
      $.local_accumulator,
      $.member_expression,
      $.subscript_expression,
    ),

    _assignment_value: $ => choice($._expression, $.select_statement),

    expression_statement: $ => $.call_expression,

    _expression: $ => choice(
      $._primary_expression,
      $.unary_expression,
      $.binary_expression,
      $.in_expression,
      $.between_expression,
      $.like_expression,
      $.is_expression,
      $.case_expression,
      $.interval_expression,
    ),

    _primary_expression: $ => choice(
      $.identifier,
      $._soft_name,
      $.global_accumulator,
      $.local_accumulator,
      $.column_reference,
      $.integer,
      $.float,
      $.string,
      $.boolean,
      $.null,
      $.parenthesized_expression,
      $.tuple,
      $.key_value_pair,
      $.map_literal,
      $.list_literal,
      $.vertex_set_literal,
      $.type_wildcard,
      $.member_expression,
      $.call_expression,
      $.subscript_expression,
      $.range_expression,
    ),

    tuple: $ => seq($._tuple_head, ')'),

    // `(key -> value)` for MapAccum, `(k1, k2 -> a1, a2)` for GroupByAccum.
    key_value_pair: $ => seq($._tuple_head, '->', commaSep1($._expression), ')'),

    // `("a" -> 1, "b" -> 2)`: the value of a MAP attribute.
    _tuple_head: $ => seq('(', commaSep1($._expression)),

    list_literal: $ => seq('[', commaSep($._expression), ']'),

    // Vertex-set seed: `{p}`, `{Person.*}`, `{ANY}`, `{@@set}`; also the
    // `{key: value}` options of functions such as vectorSearch.
    member_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._primary_expression),
      '.',
      field('property', choice($.identifier, $.local_accumulator)),
      optional(field('prime', "'")),
    )),

    call_expression: $ => prec(PREC.POSTFIX, seq(
      // `range(1, 10, 2)` is a function; `RANGE[1, 10]` a range expression.
      field('function', choice($._primary_expression, alias(kw('RANGE'), $.identifier))),
      field('arguments', $.argument_list),
    )),

    subscript_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._primary_expression),
      '[',
      commaSep1(choice($._expression, $.aliased_expression)),
      ']',
    )),

    argument_list: $ => seq(
      '(',
      optional(field('modifier', choice(
        kw('DISTINCT'),
        kw('LEADING'),
        kw('TRAILING'),
        kw('BOTH'),
      ))),
      // `_` passes a query its default value: `RUN QUERY q(21, _)`.
      commaSep(choice($._expression, alias('*', $.wildcard), $.wildcard, $.from_argument)),
      ')',
    ),

    // `trim(LEADING " " FROM s)`
    global_accumulator: _ => /@@[A-Za-z_][A-Za-z0-9_]*/,

    local_accumulator: _ => /@[A-Za-z_][A-Za-z0-9_]*/,

    // `$0`, `$"name"` and `$sys.file_name` column references in loading jobs.
    integer: _ => /\d+/,

    float: _ => token(choice(
      /\d+\.\d+([eE][+-]?\d+)?/,
      /\.\d+([eE][+-]?\d+)?/,
      /\d+[eE][+-]?\d+/,
    )),

    string: $ => choice(
      seq(
        '"',
        repeat(choice($.string_content, $.escape_sequence)),
        token.immediate('"'),
      ),
      // `"""{ "type": "s3" }"""`: JSON configuration of data sources and file
      // names, which may span lines and contain quotes.
      token(prec(1, seq('"""', /([^"]|"[^"]|""[^"])*/, '"""'))),
    ),

    string_content: _ => token.immediate(prec(1, /[^"\\]+/)),

    boolean: _ => choice(/true/i, /false/i),

    _name: $ => choice($.identifier, $._soft_name),

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
  },
});
